# cRaffles

./: .gitignore  Anchor.toml  README.md  package.json
app/: createTree.ts  utils.ts
programs/craffles/: Cargo.toml
programs/craffles/src/: errors.rs  instructions.rs  lib.rs
programs/craffles/src/instructions/: buy_tickets.rs  create_raffle.rs
tests/: craffles.ts
