[package]
name = "craffles"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "craffles"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
winnow = "=0.4.1"
mpl-bubblegum = { version = "0.7.0", features = ["cpi"] }
spl-account-compression = { version = "0.1.10", features = ["cpi"] }